--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portafolio-proyecto",
   "version": "0.1.0",
-  "homepage": "https://alanquintana0.github.io/portafolio",
+  "homepage": "https://alanquintana0.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
