--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
